# Sherpa-HackHarvard2025

./: .gitignore  README.md
backend/: .gitignore  README.md  app.py  config.py  models.py  pyproject.toml  services.py  start.sh  test_api.py  test_cache.py  test_general_qa.py  test_interact.py
frontend/: background.js  content.js  manifest.json  offscreen.js  permission.html  permission.js  popup.css  popup.html  popup.js
